# DotNetBlake3

./: .gitignore  Cargo.toml  DotNetBlake3.sln  Makefile  README.md
ConsoleApp/: ConsoleApp.csproj  Program.cs
Lib/: Binding.cs
LibStatic/: Class1.cs  LibStatic.csproj
