[package]
name = "dot_net_blake3"
version = "0.1.0"
authors = ["BigOyayubi <55793780+BigOyayubi@users.noreply.github.com>"]
edition = "2018"

[dependencies]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3.git" }
libc = "0.2.66"

[lib]
name = "dot_net_blake3"
crate-type = ["staticlib", "cdylib"]


